manifests/spookystore/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
      - name: google-cloud-secrets
        secret:
          secretName: google-service-account
          items:
          - key: spooky-svc-account.json
            path: app-credentials.json
      containers:
      - name: backend
        image:  gcr.io/spookystore-18/github-m-okeefe-spookystore
        args:
        - "-addr=:8001"
        - "-google-project-id=$(GOOGLE_PROJECT_ID)"
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: google-cloud-secrets
          mountPath: /etc/secrets/google
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            memory: 256Mi
